[gd_scene load_steps=2 format=3 uid="uid://opyjnt37c7tg"]

[ext_resource type="Script" uid="uid://cio2mh4nq3l0y" path="res://scripts/main_menu.gd" id="1_tt5f1"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_tt5f1")

[node name="MenuButtons" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 249.0
offset_right = 1080.0
offset_bottom = 399.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="MenuButtons"]
custom_minimum_size = Vector2(1080, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Net Defenders"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="PlayButton" type="Button" parent="MenuButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Play"

[node name="DifficultySelect" type="OptionButton" parent="MenuButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
alignment = 1

[node name="QuitButton" type="Button" parent="MenuButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Quit"

[node name="CreditsButton" type="Button" parent="MenuButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Credits"

[node name="WarningPopup" type="AcceptDialog" parent="."]
position = Vector2i(0, 100)
size = Vector2i(1080, 100)
popup_window = true

[node name="Label" type="Label" parent="WarningPopup"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Please select a difficulty first"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
